fixed up header alignment and menu items

--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -1,12 +1,19 @@
 .nav-primary {
-    max-height: 0;
-    overflow: hidden;
-    position: absolute;
-    left: 0;
-    top: 9rem;
-    opacity: 0;
-    transition: opacity $speed-std, max-height 1s;
+  max-height: 0;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 9rem;
+  opacity: 0;
+  transition: opacity $speed-std, max-height 1s;
+
+  @include tablet {
+    position: relative;
+
+    top: auto;
+    left: auto;
   }
+}
   
 .nav-primary {
   opacity: 1;
